@@ -1,5 +1,6 @@
 0.4.0-next:
  * show more information in the initial window
+ * allow loading more than one disk at once
  * if an operation can't be cancelled, offer a Force Cancel button
  * show game name in window title
  * remember browse path for disk images
